# MTG-Simulator

./: .gitignore  CMakeLists.txt  README.md  crash_course_magic.md
decks/: _invalid_test_file_1.txt  _invalid_test_file_2.txt  _invalid_test_file_3.txt  bolt_10.txt  bolt_30.txt  bolt_40.txt  bolt_50.txt  boros_burn.txt  pauper_monored.txt  redwhite_sample.txt
results/: dumpthread.txt  results.txt
src/: Card.cpp  Card.h  GameResult.cpp  GameResult.h  main.cpp
src/Goldfish/: Goldfish.cpp  Goldfish.h  goldfish_cardData.cpp  goldfish_fileFuncs.cpp  goldfish_gameFuncs.cpp  goldfish_interface.cpp  goldfish_landFuncs.cpp  sortLibrary.txt
src/list/: LinkedList.h  LinkedList.tpp  List.h
src/queue/: ArrayQueue.h  ArrayQueue.tpp  LinkedQueue.h  LinkedQueue.tpp  Queue.h
src/stack/: ArrayStack.h  ArrayStack.tpp  LinkedStack.h  LinkedStack.tpp  Stack.h
